# marrow

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  marrow.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
assets/: UAL1_Standard_RM.glb
bench/ozz_compare/: CMakeLists.txt  bench_gen.h  floor_noscatter.c  main.cpp
demo/: CMakeLists.txt  README.md  assets_gltf.c  assets_gltf.h  assets_proc.c  assets_proc.h  camera.c  camera.h  crowd.c  crowd.h  crowd_cpu.c  crowd_cpu.h  field.c  field.h  heroes.c  heroes.h  hud.c  hud.h  jobs.c  jobs.h  linalg.h  main.c  models.c  models.h  png_write.h  profiler.c  profiler.h  validate.c  validate.h  vk_context.c  vk_context.h
demo/cmake/: check_bench.cmake  embed_spirv.cmake
demo/shaders/: crowd.frag  crowd.vert  crowd_skel.vert  crowd_static_bench.vert  ground.frag  ground.vert  hud.frag  hud.vert  skel.frag  skin_tierA.vert  skin_tierA_f16.vert  skin_tierA_skel.vert  validate_skin.comp  validate_skin_f16.comp  validate_skin_f16_ssbo.comp
examples/: CMakeLists.txt  quickstart.c
examples/skinning/: README.md  marrow_skin.glsl  marrow_skin.hlsl
fixtures/: rig.mrw
site/: mainpage.md
site/concepts/: conventions.md  two-tiers.md
site/howto/: baked-shader.md  blend.md  crowd.md  gltf.md  integrate.md
site/reference/: cmake.md  errors.md  format.md
site/theme/: README.md  marrow.css
site/tutorials/: first-character.md
src/: marrow_batch.c  marrow_batch_avx2.c  marrow_batch_avx2_fma.c  marrow_batch_kernel.h  marrow_batch_simd.h  marrow_batch_sse2.c  marrow_blend.c  marrow_blend_avx2.c  marrow_blend_avx2_fma.c  marrow_blend_batch.c  marrow_blend_simd.h  marrow_blend_sse2.c  marrow_dispatch.c  marrow_format.c  marrow_identity.c  marrow_ik.c  marrow_internal.h  marrow_math.c  marrow_pose.c  marrow_quat.h  marrow_wide.h
tests/: CMakeLists.txt  banned_scan.cmake  bench_batch.c  bench_rig.h  fixture_rig.h  fuzz_blob.c  fuzz_blob.h  fuzz_replay.c  gen_fixtures.c  gen_fuzz_corpus.c  golden_ids.h  isa_scan.cmake  mrw_build.c  mrw_build.h  oracle_ids.py  test_additive.c  test_batch.c  test_blend.c  test_blend_batch.c  test_codec1.c  test_cpp_link.cpp  test_f16_skin.c  test_f16c.c  test_format_pose.c  test_golden_bytes.c  test_identity.c  test_ik.c  test_malformed.c  test_math.c  test_parity.c  test_require_avx2.c  test_root_motion.c  test_sampling.c  test_util.h
tests/fuzz/: dict.txt
tests/fuzz/corpus/: seed_baked_multiclip.mrw  seed_clip_codec0.mrw  seed_clip_codec1.mrw  seed_rootmotion.mrw  seed_skeleton_only.mrw
tools/: CMakeLists.txt
tools/authoring/: mrw_authoring.c  mrw_authoring.h  mrw_decompose.c  mrw_decompose.h
tools/bake/: bake_run.c  bake_run.h  main.c  mesh_probes.c  mrw_bake.c  mrw_bake.h
tools/bake/tests/: test_bake.c
tools/gltf2marrow/: convert.c  convert.h  joint_order.c  joint_order.h  main.c
tools/gltf2marrow/tests/: test_gltf2marrow.c
